# ota_updater

./: .gitignore  .gitmodules  Bootloader流程.md  CMakeLists.txt  README.md
Boot/: .gitignore  .mxproject  Boot.ioc
Boot/Core/Inc/: main.h
Boot/Core/Src/: gpio.c  main.c  spi.c  usart.c
Boot/MDK-ARM/: Boot.uvguix.30929  Boot.uvguix.nickyyy  Boot.uvoptx  Boot.uvprojx  JLinkLog.txt  startup_stm32h750xx.lst
Boot/MDK-ARM/.eide/: eide.json
Boot/MDK-ARM/Boot/: Boot.axf  Boot.build_log.htm  Boot.hex  Boot.htm  Boot.lnp  Boot.map  Boot.sct  Boot_Boot.dep  Boot_sct.Bak
Boot/MDK-ARM/RTE/_Boot/: RTE_Components.h
Boot/User/Boot/Src/: boot.c
Boot/User/Driver/Inc/: bsp_flash.h  w25qxx_driver.h
Boot/User/Driver/Src/: bsp_flash.c  w25qxx_driver.c
Boot/User/Service/Inc/: log.h  ring_buffer.h
Boot/User/Service/Src/: log.c  ring_buffer.c
Bootloader/: .gitignore  .mxproject  Bootloader.ioc
Bootloader/Core/Inc/: main.h  stm32h7xx_it.h  version.h
Bootloader/Core/Src/: fdcan.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  system_stm32h7xx.c  usart.c  version.c
Bootloader/MDK-ARM/: .gitignore  APP.uvguix.nickyyy  APP.uvoptx  APP.uvprojx  Bootloader.uvguix.nickyyy  Bootloader.uvoptx  Bootloader.uvprojx  JLinkLog.txt  startup_stm32h750xx.lst
Bootloader/MDK-ARM/.eide/: eide.json
Bootloader/MDK-ARM/Bootloader/: APP.axf  APP.build_log.htm  APP.hex  APP.htm  APP.lnp  APP.map  APP_APP.dep  APP_APP_AREA1.dep  APP_APP_AREA2.dep  APP_APP_NoBoot.dep  APP_AREA1.axf  APP_AREA1.build_log.htm  APP_AREA1.hex  APP_AREA1.htm  APP_AREA1.lnp  APP_AREA1.map  APP_AREA1.sct  APP_AREA1_sct.Bak  APP_AREA2.axf  APP_AREA2.build_log.htm  APP_AREA2.hex  APP_AREA2.htm  APP_AREA2.lnp  APP_AREA2.map  APP_AREA2.sct  APP_AREA2_sct.Bak  APP_NoBoot.axf  APP_NoBoot.build_log.htm  APP_NoBoot.hex  APP_NoBoot.htm  APP_NoBoot.lnp  APP_NoBoot.map  Bootloader.axf  Bootloader.build_log.htm  Bootloader.hex  Bootloader.htm  Bootloader.lnp  Bootloader.map  Bootloader_Bootloader.dep  Bootloader_sct.Bak
Bootloader/MDK-ARM/Bootloader/APP_AREA2.bin/: ER_IROM1  ER_IROM2
Bootloader/MDK-ARM/RTE/_APP/: RTE_Components.h
Bootloader/MDK-ARM/RTE/_APP_AREA1/: RTE_Components.h
Bootloader/MDK-ARM/RTE/_APP_AREA2/: RTE_Components.h
Bootloader/MDK-ARM/RTE/_APP_NoBoot/: RTE_Components.h
Bootloader/MDK-ARM/RTE/_Bootloader/: RTE_Components.h
Bootloader/USB_DEVICE/App/: usbd_cdc_if.c
Bootloader/User/Boot/Inc/: boot.h
Bootloader/User/Driver/Inc/: bsp_fdcan.h  eeprom_at24c256.h  oled_ssd1306_1_3.h  w25qxx_driver.h
Bootloader/User/Driver/Src/: bsp_fdcan.c  bsp_flash.c  eeprom_at24c256.c  oled_ssd1306_1_3.c  w25qxx_driver.c
Bootloader/User/Service/Inc/: iap.h  ring_buffer.h  soft_i2c.h  uni_shell.h  uni_shell_osal.h  w25qxx.h
Bootloader/User/Service/Src/: iap.c  ring_buffer.c  soft_i2c.c  uni_shell.c  uni_shell_osal.c  w25qxx.c  w25qxx_4M.c
Bootloader/User/Task/Inc/: comTask.h  otaTask.h  shellTask.h
Bootloader/User/Task/Src/: comTask.c  otaTask.c  shellTask.c
Jlink/: download.jflash  firmware.hex  merge.bat
ota_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol-zh_cn.md  protocol.md
ota_client/include/: DecodeThread.h  SerialDecoder.h  UpdateService.h
ota_client/include/packet/: Device2Client.h
ota_client/src/: DecodeThread.cc  SerialDecoder.cc  UpdateService.cc
ota_client/test/: CMakeLists.txt  testSize.cpp
ota_server/: .gitignore  CMakeLists.txt
ota_server/cmake/: libsiem.cmake
ota_server/include/: TransferPacket.h
ota_server/src/: CMakeLists.txt  TransferPacket.cpp  main.cpp  test.c
public/include/: bsp_crc.h
public/src/: bsp_crc.c
scripts/: clean_target.py  sync_code.bat
